# generate-sample-mp3

./: .gitignore  .mise.toml  README.md  pyproject.toml
src/generate_sample_mp3/: main.py  volume.py
